--- a/app/directives/orderInfo.directive.html
+++ b/app/directives/orderInfo.directive.html
@@ -26,5 +26,19 @@
                     style="margin-top: 32px">Save</button>
             </div>
         </div>
+        <div class="row">
+            <div class="col-6">
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1"
+                            ng-model="order.withdrawFromAccountBalance">
+                        <label class="form-check-label" for="defaultCheck1">
+                            Withdraw from account balance
+                        </label>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </form>
 </fieldset>
