--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <script src="app/services/orderService.js"></script>
     <script src="app/services/authenService.js"></script>
     <script src="app/services/accountService.js"></script>
+    <script src="app/services/transactionService.js"></script>
 
     <script src="app/controllers/sprint.controller.js"></script>
     <script src="app/controllers/timesheet.controller.js"></script>
@@ -98,6 +99,7 @@
     <script src="app/directives/confirmClick.directive.js"></script>
     <script src="app/directives/accountList.directive.js"></script>
     <script src="app/directives/accountCreation.directive.js"></script>
+    <script src="app/directives/transactionList.directive.js"></script>
 
     <script src="app/app.value.js"></script>
 </body>
