--- a/app/controllers/orderDetail.controller.html
+++ b/app/controllers/orderDetail.controller.html
@@ -45,7 +45,7 @@
                                     <td>{{orderDetail.finalPrice | currency: "":0}}</td>
                                     <td ng-if="model.selectedOrder.status === 'active'">
                                         <i class="fas fa-edit"
-                                           ng-click="model.editOrderDetail($index, orderDetail)"></i>
+                                            ng-click="model.editOrderDetail($index, orderDetail)"></i>
                                         <i class="fas fa-trash-alt" ng-click="model.removeOrderDetail($index)"></i>
                                     </td>
                                 </tr>
@@ -56,10 +56,13 @@
                                     <td>{{model.selectedOrder.totalDiscountedPrice | currency: "":0 }}</td>
                                 </tr>
                                 <tr ng-if="model.selectedOrder.detail && model.selectedOrder.detail.length > 0">
-                                    <td colspan="3" class="text-center"><strong>Total (included shipping fee)</strong></td>
-                                    <td><strong>{{model.selectedOrder.totalPriceWithShippingFee | currency: "":0 }}</strong></td>
+                                    <td colspan="3" class="text-center"><strong>Total (included shipping fee)</strong>
+                                    </td>
+                                    <td><strong>{{model.selectedOrder.totalPriceWithShippingFee | currency: "":0 }}</strong>
+                                    </td>
                                     <!--<td></td>-->
-                                    <td><strong>{{model.selectedOrder.totalDiscountedPriceWithShippingFee | currency: "":0 }}</strong></td>
+                                    <td><strong>{{model.selectedOrder.totalDiscountedPriceWithShippingFee | currency: "":0 }}</strong>
+                                    </td>
                                     <td><strong>{{model.selectedOrder.totalFinalPrice | currency: "":0 }}</strong></td>
                                 </tr>
                             </tbody>
@@ -84,7 +87,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Price</label>
-                                    <input type="text" class="form-control" placeholder="e.g. 54.000"
+                                    <input type="number" class="form-control" placeholder="e.g. 54.000"
                                         ng-model="model.orderDetail.price">
                                 </div>
                                 <button type="submit" class="btn btn-primary" ng-click="model.submitOrderDetail()"
