--- a/app/directives/accountCreation.directive.html
+++ b/app/directives/accountCreation.directive.html
@@ -12,14 +12,14 @@
             <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-10">
                 <input type="email" class="form-control" ng-model="accountCopy.email" ng-disabled="!creationMode">
-                <small id="emailHelp" class="form-text text-muted">It cannot change afterward.</small>
+                <small id="emailHelp" class="form-text text-muted">It cannot be changed afterward.</small>
             </div>
         </div>
 
         <div class="form-group row">
             <label for="staticEmail" class="col-sm-2 col-form-label">Balance</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" ng-model="accountCopy.balance">
+                <input type="number" class="form-control" ng-model="accountCopy.balance">
             </div>
         </div>
         <button type="submit" class="btn btn-primary" ng-click="submit()">Submit</button>
