--- a/app/directives/order.creation.form.html
+++ b/app/directives/order.creation.form.html
@@ -8,8 +8,7 @@
 
         <div class="form-group">
             <label for="exampleInputEmail1">Menu</label>
-            <input type="text" class="form-control" placeholder="https://foody.com/"
-                   ng-model="order.menuUrl">
+            <input type="text" class="form-control" placeholder="https://foody.com/" ng-model="order.menuUrl">
         </div>
 
         <div class="form-group">
@@ -31,13 +30,20 @@
                 <input type="text" class="form-control" placeholder="20.000" ng-model="order.shippingFee">
             </div>
         </div>
+        <div class="form-group">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1"
+                    ng-model="order.withdrawFromAccountBalance">
+                <label class="form-check-label" for="defaultCheck1">
+                    Withdraw from account balance
+                </label>
+            </div>
+        </div>
 
-        <button type="submit" class="btn btn-primary" ng-disabled="!order.menuUrl"
-                ng-click="saveOrder()">
+        <button type="submit" class="btn btn-primary" ng-disabled="!order.menuUrl" ng-click="saveOrder()">
             Submit
         </button>
-        <button type="submit" class="btn btn-warning"
-                ng-click="clearOrder()">
+        <button type="submit" class="btn btn-warning" ng-click="clearOrder()">
             Clear form/New Order
         </button>
     </form>
