--- a/app/directives/order.creation.form.html
+++ b/app/directives/order.creation.form.html
@@ -30,7 +30,7 @@
                 <input type="text" class="form-control" placeholder="20.000" ng-model="order.shippingFee">
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-if="user.email === 'duylamln@gmail.com'">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="defaultCheck1"
                     ng-model="order.withdrawFromAccountBalance">
