Add version for js files

--- a/app/directives/orderInfo.directive.html
+++ b/app/directives/orderInfo.directive.html
@@ -26,7 +26,7 @@
                     style="margin-top: 32px">Save</button>
             </div>
         </div>
-        <div class="row">
+        <div class="row" ng-if="user.email === 'duylamln@gmail.com'">
             <div class="col-6">
                 <div class="form-group">
                     <div class="form-check">
