--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             messagingSenderId: "953506312223"
         };
         firebase.initializeApp(config);
+        window.v = 1;
     </script>
 
 
@@ -72,36 +73,36 @@
 
     <script src="scripts/jquery-roadmap/jquery.roadmap.js"></script>
 
-    <script src="app/app.js"></script>
-    <script src="app/services/timesheetService.js"></script>
-    <script src="app/services/convertService.js"></script>
-    <script src="app/services/openProjectService.js"></script>
-    <script src="app/services/orderService.js"></script>
-    <script src="app/services/authenService.js"></script>
-    <script src="app/services/accountService.js"></script>
-    <script src="app/services/transactionService.js"></script>
+    <script src="app/app.js?v=20190527"></script>
+    <script src="app/services/timesheetService.js?v=20190527"></script>
+    <script src="app/services/convertService.js?v=20190527"></script>
+    <script src="app/services/openProjectService.js?v=20190527"></script>
+    <script src="app/services/orderService.js?v=20190527"></script>
+    <script src="app/services/authenService.js?v=20190527"></script>
+    <script src="app/services/accountService.js?v=20190527"></script>
+    <script src="app/services/transactionService.js?v=20190527"></script>
 
-    <script src="app/controllers/sprint.controller.js"></script>
-    <script src="app/controllers/timesheet.controller.js"></script>
-    <script src="app/controllers/login.controller.js"></script>
-    <script src="app/controllers/order.controller.js"></script>
-    <script src="app/controllers/orderDetail.controller.js"></script>
-    <script src="app/controllers/app.controller.js"></script>
-    <script src="app/controllers/account.controller.js"></script>
-    <script src="app/controllers/bank.controller.js"></script>
+    <script src="app/controllers/sprint.controller.js?v=20190527"></script>
+    <script src="app/controllers/timesheet.controller.js?v=20190527"></script>
+    <script src="app/controllers/login.controller.js?v=20190527"></script>
+    <script src="app/controllers/order.controller.js?v=20190527"></script>
+    <script src="app/controllers/orderDetail.controller.js?v=20190527"></script>
+    <script src="app/controllers/app.controller.js?v=20190527"></script>
+    <script src="app/controllers/account.controller.js?v=20190527"></script>
+    <script src="app/controllers/bank.controller.js?v=20190527"></script>
 
 
-    <script src="app/directives/timeline.directive.js"></script>
-    <script src="app/directives/featuredOrder.directive.js"></script>
-    <script src="app/directives/orderInfo.directive.js"></script>
-    <script src="app/directives/order.creation.form.js"></script>
-    <script src="app/directives/file.upload.js"></script>
-    <script src="app/directives/confirmClick.directive.js"></script>
-    <script src="app/directives/accountList.directive.js"></script>
-    <script src="app/directives/accountCreation.directive.js"></script>
-    <script src="app/directives/transactionList.directive.js"></script>
+    <script src="app/directives/timeline.directive.js?v=20190527"></script>
+    <script src="app/directives/featuredOrder.directive.js?v=20190527"></script>
+    <script src="app/directives/orderInfo.directive.js?v=20190527"></script>
+    <script src="app/directives/order.creation.form.js?v=20190527"></script>
+    <script src="app/directives/file.upload.js?v=20190527"></script>
+    <script src="app/directives/confirmClick.directive.js?v=20190527"></script>
+    <script src="app/directives/accountList.directive.js?v=20190527"></script>
+    <script src="app/directives/accountCreation.directive.js?v=20190527"></script>
+    <script src="app/directives/transactionList.directive.js?v=20190527"></script>
 
-    <script src="app/app.value.js"></script>
+    <script src="app/app.value.js?v=20190527"></script>
 </body>
 
 </html>
