add modal account activity

--- a/app/controllers/account.controller.html
+++ b/app/controllers/account.controller.html
@@ -20,4 +20,7 @@
             <button type="submit" class="btn btn-primary" ng-click="model.saveUserProfile()">Submit</button>
         </form>
     </div>
+    <div class="col-lg-5">
+        <transaction-list transactions="model.transactions"></transaction-list>
+    </div>
 </div>
