--- a/app/controllers/bank.controller.html
+++ b/app/controllers/bank.controller.html
@@ -9,6 +9,6 @@
     </div>
     <div class="col-lg-5 col-xs-12">
         <transaction-list transactions="model.transactions">
-            </account-list>
+        </transaction-list>
     </div>
 </div>
