--- a/index.html
+++ b/index.html
@@ -62,16 +62,17 @@
     <script src="scripts/loading-bar.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 
     <script src="scripts/jquery-roadmap/jquery.roadmap.js"></script>
+    <script src="scripts/ui-bootstrap-tpls-2.5.0.min.js"></script>
 
     <script src="app/app.js?v=201905281"></script>
     <script src="app/services/timesheetService.js?v=201905281"></script>
@@ -90,7 +91,7 @@
     <script src="app/controllers/app.controller.js?v=201905281"></script>
     <script src="app/controllers/account.controller.js?v=201905281"></script>
     <script src="app/controllers/bank.controller.js?v=201905281"></script>
-
+    <script src="app/controllers/accountActivity.controller.js?v=201905281"></script>
 
     <script src="app/directives/timeline.directive.js?v=201905281"></script>
     <script src="app/directives/featuredOrder.directive.js?v=201905281"></script>
