build account activity modal

--- a/app/app.html
+++ b/app/app.html
@@ -10,7 +10,7 @@
   </a>
   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
     aria-haspopup="true" aria-expanded="false" ng-if="model.user">
-    {{model.user.displayName}}
+    {{model.user.displayName}} ({{model.balance | currency:"":0}})
   </a>
   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
     <a class="dropdown-item" ui-sref="main.account">Account</a>
