--- a/app/controllers/account.controller.html
+++ b/app/controllers/account.controller.html
@@ -14,7 +14,8 @@
             </div>
              <div class="form-group">
                 <label>Balance</label>
-                <input type="text" class="form-control" ng-model="model.balance" readonly>
+                 <h4>{{model.balance | currency:'VND ':0}}</h4>
+                <!--<input type="text" class="form-control" ng-model="model.balance" readonly>-->
             </div> 
 
             <button type="submit" class="btn btn-primary" ng-click="model.saveUserProfile()">Submit</button>
