--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <script src="app/controllers/account.controller.js?v=20190529"></script>
     <script src="app/controllers/bank.controller.js?v=20190529"></script>
     <script src="app/controllers/accountActivity.controller.js?v=20190529"></script>
+    <script src="app/controllers/orderTransactionModal.controller.js?v=20190529"></script>
 
     <script src="app/directives/timeline.directive.js?v=20190529"></script>
     <script src="app/directives/featuredOrder.directive.js?v=20190529"></script>
