--- a/app/controllers/account.controller.html
+++ b/app/controllers/account.controller.html
@@ -12,11 +12,14 @@
                 <input type="email" class="form-control" ng-model="model.user.email" placeholder="Lam Lê" readonly>
 
             </div>
-             <div class="form-group">
+            <div class="form-group">
+                <label>Open Project API Key</label>
+                <input type="text" class="form-control" ng-model="model.user.account.openProjectAPIKey" />
+            </div>
+            <div class="form-group">
                 <label>Balance</label>
-                 <h4>{{model.balance | currency:'VND ':0}}</h4>
-                <!--<input type="text" class="form-control" ng-model="model.balance" readonly>-->
-            </div> 
+                <h4>{{model.user.account.balance | currency:'VND ':0}}</h4>
+            </div>
 
             <button type="submit" class="btn btn-primary" ng-click="model.saveUserProfile()">Submit</button>
         </form>
