using open project api from Google app engine

--- a/app/controllers/account.controller.html
+++ b/app/controllers/account.controller.html
@@ -14,7 +14,7 @@
             </div>
             <div class="form-group">
                 <label>Open Project API Key</label>
-                <input type="text" class="form-control" ng-model="model.user.account.openProjectAPIKey" />
+                <input type="text" class="form-control" ng-model="model.user.userInfo.openProjectAPIKey" />
             </div>
             <div class="form-group">
                 <label>Balance</label>
