--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <script src="app/services/authenService.js?v=20190530"></script>
     <script src="app/services/accountService.js?v=20190530"></script>
     <script src="app/services/transactionService.js?v=20190530"></script>
+    <script src="app/services/userInfoService.js?v=20190530"></script>
 
     <script src="app/controllers/sprint.controller.js?v=20190530"></script>
     <script src="app/controllers/timesheet.controller.js?v=20190530"></script>
