--- a/app/app.html
+++ b/app/app.html
@@ -5,6 +5,8 @@
         <a class="nav-link" ui-sref-active="active" ui-sref="main.bank"
            ng-if="model.user.email == 'duylamln@gmail.com'">Bank</a>
         <a class="nav-link" ui-sref-active="active" ui-sref="main.order">Order</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="main.admin"
+           ng-if="model.user.email == 'duylamln@gmail.com'">Administration</a>
         <a class="nav-link" ui-sref-active="active" ui-sref="main.login({returnState: $root.$state.current.name})"
            ng-if="!model.user">
             Sign In / Sign Up
