--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <script src="app/services/accountService.js?v=20190530"></script>
     <script src="app/services/transactionService.js?v=20190530"></script>
     <script src="app/services/userInfoService.js?v=20190530"></script>
+    <script src="app/services/fbRtService.js?v=20190530"></script>
 
     <script src="app/controllers/sprint.controller.js?v=20190530"></script>
     <script src="app/controllers/timesheet.controller.js?v=20190530"></script>
@@ -93,6 +94,8 @@
     <script src="app/controllers/bank.controller.js?v=20190530"></script>
     <script src="app/controllers/accountActivity.controller.js?v=20190530"></script>
     <script src="app/controllers/orderTransactionModal.controller.js?v=20190530"></script>
+    <script src="app/controllers/admin.controller.js?v=20190530"></script>
+    <script src="app/controllers/adminMaster.controller.js?v=20190530"></script>
 
     <script src="app/directives/timeline.directive.js?v=20190530"></script>
     <script src="app/directives/featuredOrder.directive.js?v=20190530"></script>
