--- a/app/directives/orderInfo.directive.html
+++ b/app/directives/orderInfo.directive.html
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <div class="form-group" ng-if="user.email === 'duylamln@gmail.com'">
+        <div class="form-group" ng-if="user.email === 'duylamln@gmail.com' || model.user.email == 'dung.nguyen@travel2pay.com'">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="defaultCheck1"
                        ng-model="order.withdrawFromAccountBalance">
@@ -34,7 +34,7 @@
         </div>
     </form>
 </fieldset>
-<div class="form-group" ng-if="user.email === 'duylamln@gmail.com'">
+<div class="form-group" ng-if="user.email === 'duylamln@gmail.com' || model.user.email == 'dung.nguyen@gmail.com'">
     <button type="submit" class="btn btn-danger" ng-click="finishOrder()"
             ng-if="order.status === 'active'">
         Finish Order
