--- a/app/directives/orderInfo.directive.html
+++ b/app/directives/orderInfo.directive.html
@@ -34,7 +34,7 @@
         </div>
     </form>
 </fieldset>
-<div class="form-group" ng-if="user.email === 'duylamln@gmail.com' || model.user.email == 'dung.nguyen@gmail.com'">
+<div class="form-group" ng-if="user.email === 'duylamln@gmail.com' || user.email == 'dung.nguyen@travel2pay.com'">
     <button type="submit" class="btn btn-danger" ng-click="finishOrder()"
             ng-if="order.status === 'active'">
         Finish Order
